# yugiohcards

./: .gitignore  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  example.py  main.py  requirements.txt  setup.cfg  setup.py  urls.py  ygoprodeck.py  yugioh_cards.csv
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
