[metadata]
name = ygoprodeck
version = 1.0.2
author = Daniel Taylor
email = kingorgg@gmail.com
description = Python wrapper for the YGOProDeck API.
url = https://github.com/kingorgg/yugiohcards
project_urls =
    Code=https://github.com/kingorgg/yugiohcards
    Issues=https://github.com/kingorgg/yugiohcards/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Board Games
keywords =
    yugiohcards
    yugioh
    yugioh-tcg
    tcg
    ygoprodeck
    api
    wrapper

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    certifi >= 2020.6.20
    chardet >= 3.0.4
    idna >= 2.10
    requests >= 2.24.0
    urllib3 >= 1.25.11
python_requires = 
    >= 3.6
setup_requires =
    setuptools >= 42
    wheel